fix: images now visible, height 100% through flex chain

--- a/src/index.css
+++ b/src/index.css
@@ -1092,7 +1092,7 @@ body {
 
 .detail-slider-track {
   display: flex;
-  height: 257px;
+  height: 100%;
   will-change: transform;
 }
 
